--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,13 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/images/
+    - assets/gifs/
+    - assets/videos/
+    - assets/icons/
+    - assets/audio/
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
