Feedback + Share App + T&C + App Icon

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "autonomousuav",
-    "short_name": "autonomousuav",
+    "name": "SOARIS",
+    "short_name": "SOARIS",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
