--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   share_plus: ^10.0.2
   url_launcher: ^6.3.0
   http: ^1.2.2
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
