--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_maps_flutter: ^2.3.0
   firebase_core: ^4.2.1
-  firebase_auth: 6.1.2
-  firebase_database: ^12.1.0
-  share_plus: ^10.0.2
+  firebase_auth: ^6.1.2
+  firebase_database: 12.0.4
+  share_plus: ^12.0.1
   url_launcher: ^6.3.0
   http: ^1.2.2
   provider: ^6.1.1
